[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/business_hours_editor.gd" type="Script" id=1]
[ext_resource path="res://src/ui/controls/timespan_control.tscn" type="PackedScene" id=2]

[node name="BusinessHoursEditor" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
color = Color( 0.0588235, 0.34902, 0.388235, 1 )

[node name="Timespans" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -410.0
margin_top = -198.0
margin_right = 410.0
margin_bottom = 198.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 41.0
margin_top = -80.0
margin_right = 1000.0
margin_bottom = -40.0

[node name="TimeSpanItem_Bulk" parent="Control/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 700.0
rect_min_size = Vector2( 700, 40 )
generated = false
can_be_deleted = false
has_apply_button = true
edit_datetime = false

[node name="Button_Add" type="Button" parent="Control/HBoxContainer"]
margin_left = 704.0
margin_right = 741.0
margin_bottom = 40.0
text = "Add"

[node name="Button_Accept" type="Button" parent="Control/HBoxContainer"]
margin_left = 745.0
margin_right = 801.0
margin_bottom = 40.0
text = "Accept"

[node name="Button_Close" type="Button" parent="Control/HBoxContainer"]
margin_left = 805.0
margin_right = 859.0
margin_bottom = 40.0
text = "Cancel"

[node name="Label_Stall_Name" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_top = 64.0
margin_right = 40.0
margin_bottom = 80.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 40, 0 )
text = "Stall Name"
align = 1

[connection signal="pressed" from="Control/HBoxContainer/Button_Add" to="." method="_on_Button_Add_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Button_Accept" to="." method="_on_Button_Accept_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Button_Close" to="." method="_on_Button_Close_pressed"]
